그림 추천 어댑터 (미완)

--- a/app/src/main/res/layout/activity_crop.xml
+++ b/app/src/main/res/layout/activity_crop.xml
@@ -85,7 +85,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/blue"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintTop_toBottomOf="@id/constraintLayout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -110,6 +110,7 @@
         android:background="#BDBDBD"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:visibility="invisible"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/constraintLayout"
         app:layout_constraintBottom_toBottomOf="parent"
