--- a/app/src/main/res/layout/item_chosen_object.xml
+++ b/app/src/main/res/layout/item_chosen_object.xml
@@ -22,28 +22,28 @@
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/startX"
+        android:id="@+id/left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/startY"
+        android:id="@+id/right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/width"
+        android:id="@+id/top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/height"
+        android:id="@+id/bottom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
