--- a/app/src/main/res/layout/activity_crop.xml
+++ b/app/src/main/res/layout/activity_crop.xml
@@ -92,6 +92,7 @@
         app:layout_constraintHeight_percent="0.15">
 
         <android.widget.Button
+            android:id="@+id/check"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="안녕"/>
