--- a/app/src/main/res/layout/activity_drawing.xml
+++ b/app/src/main/res/layout/activity_drawing.xml
@@ -73,7 +73,6 @@
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:background="@color/skin"
-            android:contentDescription="image"
             android:src="@drawable/pallet_normal"
             android:tag="@color/skin" />
 
@@ -82,7 +81,6 @@
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:background="@color/black"
-            android:contentDescription="image"
             android:onClick="paintClicked"
             android:src="@drawable/pallet_normal"
             android:tag="@color/black" />
@@ -92,7 +90,6 @@
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:background="@color/red"
-            android:contentDescription="image"
             android:src="@drawable/pallet_normal"
             android:onClick="paintClicked"
             android:tag="@color/red" />
@@ -102,7 +99,6 @@
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:background="@color/green"
-            android:contentDescription="image"
             android:onClick="paintClicked"
             android:src="@drawable/pallet_normal"
             android:tag="@color/green" />
@@ -112,7 +108,6 @@
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:background="@color/blue"
-            android:contentDescription="image"
             android:src="@drawable/pallet_normal"
             android:onClick="paintClicked"
             android:tag="@color/blue" />
@@ -122,7 +117,6 @@
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:background="@color/yellow"
-            android:contentDescription="image"
             android:onClick="paintClicked"
             android:src="@drawable/pallet_normal"
             android:tag="@color/yellow" />
@@ -132,7 +126,6 @@
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:background="@color/lollipop"
-            android:contentDescription="image"
             android:onClick="paintClicked"
             android:src="@drawable/pallet_normal"
             android:tag="@color/lollipop" />
@@ -142,7 +135,6 @@
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:background="@color/random"
-            android:contentDescription="image"
             android:onClick="paintClicked"
             android:src="@drawable/pallet_normal"
             android:tag="@color/random" />
@@ -173,7 +165,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:tag="@color/transparent"
+                android:tag="eraser"
                 android:textSize="11dp"
                 android:text="지우개"/>
             <ImageButton
