--- a/app/src/main/res/layout/activity_anim.xml
+++ b/app/src/main/res/layout/activity_anim.xml
@@ -10,11 +10,12 @@
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:src="@drawable/ic_launcher_foreground"
-        android:background="@drawable/ic_launcher_background"
-        />
+        android:background="@drawable/ic_launcher_background" />
+
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -30,8 +31,8 @@
             android:background="@color/black"
             android:textColor="@color/white"
             android:textAlignment="center"
-            android:textSize="8pt"
-            />
+            android:textSize="8pt"/>
+
         <Button
             android:id="@+id/btnBounce"
             android:layout_width="wrap_content"
@@ -43,8 +44,8 @@
             android:background="@color/black"
             android:textColor="@color/white"
             android:textAlignment="center"
-            android:textSize="8pt"
-            />
+            android:textSize="8pt"/>
+
         <Button
             android:id="@+id/btnFade"
             android:layout_width="wrap_content"
@@ -56,8 +57,8 @@
             android:background="@color/black"
             android:textColor="@color/white"
             android:textAlignment="center"
-            android:textSize="8pt"
-            />
+            android:textSize="8pt"/>
+
         <Button
             android:id="@+id/btnTwist"
             android:layout_width="wrap_content"
@@ -70,10 +71,18 @@
             android:background="@color/black"
             android:textColor="@color/white"
             android:textAlignment="center"
-            android:textSize="8pt"
-            />
+            android:textSize="8pt"/>
+
         </LinearLayout>
     </HorizontalScrollView>
+
+    <Button
+        android:id="@+id/recordBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginVertical="50dp"
+        android:text="녹화"/>
 
 
 </LinearLayout>
