--- a/app/src/main/res/anim/fadeinout.xml
+++ b/app/src/main/res/anim/fadeinout.xml
@@ -3,4 +3,7 @@
     android:duration="3000"
     android:fromAlpha="0.0"
     android:interpolator="@android:anim/accelerate_interpolator"
-    android:toAlpha="1.0" />
+    android:toAlpha="1.0"
+    android:repeatCount="infinite"
+    android:repeatMode= "reverse"
+    />
