저장된 비디오 불러오기
URI 이용, 모션 테스트 화면에 추가

--- a/app/src/main/res/layout/activity_anim.xml
+++ b/app/src/main/res/layout/activity_anim.xml
@@ -84,5 +84,12 @@
         android:layout_marginVertical="50dp"
         android:text="녹화"/>
 
+    <Button
+        android:id="@+id/showBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginVertical="10dp"
+        android:text="녹화된 영상 보기"/>
 
 </LinearLayout>
