--- a/app/src/main/res/layout/activity_motion.xml
+++ b/app/src/main/res/layout/activity_motion.xml
@@ -49,10 +49,31 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@id/M_layout"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/M_layout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
+    <android.widget.Button
+        android:visibility="gone"
+        android:id="@+id/startRecord"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="    녹화 시작    "
+        app:layout_constraintTop_toBottomOf="@id/M_layout"
+        app:layout_constraintBottom_toTopOf="@id/skipRecord"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <android.widget.Button
+        android:visibility="gone"
+        android:id="@+id/skipRecord"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="녹화 건너뛰기"
+        app:layout_constraintTop_toBottomOf="@id/startRecord"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
