--- a/app/src/main/res/layout/item_timeline.xml
+++ b/app/src/main/res/layout/item_timeline.xml
@@ -46,6 +46,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <com.example.picturediary.TextureVideoView
             android:id="@+id/videoView"
             android:layout_width="0dp"
@@ -54,6 +55,18 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintWidth_percent="1"/>
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:visibility="gone"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@color/white"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintWidth_percent="1"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
