--- a/app/src/main/res/layout/activity_anim.xml
+++ b/app/src/main/res/layout/activity_anim.xml
@@ -122,5 +122,12 @@
         android:layout_marginVertical="50dp"
         android:text="녹화"/>
 
+    <Button
+        android:id="@+id/showBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="영상 확인"/>
+
 
 </LinearLayout>
