--- a/app/src/main/res/layout/activity_motion.xml
+++ b/app/src/main/res/layout/activity_motion.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#BDBDBD"
-  >
+    android:background="#BDBDBD">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -32,11 +31,33 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="#BDBDBD"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:background="#67D493"
+        android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/M_layout"/>
+        app:layout_constraintBottom_toTopOf="@id/M_layout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+
+        <TextView
+            android:id="@+id/waitText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" 일기 만드는 중..."
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            android:textAlignment="center"
+            android:gravity="center"/>
+
+        <ImageView
+            android:id="@+id/bookflip"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:scaleType="centerCrop"
+            android:src="@raw/bookflip"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -44,40 +65,5 @@
         android:background="#BDBDBD"
         app:layout_constraintTop_toBottomOf="@id/M_layout"
         app:layout_constraintBottom_toBottomOf="parent"/>
-
-    <TextView
-        android:id="@+id/waitText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#8C8C8C"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:textAlignment="center"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/M_layout"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
-
-    <android.widget.Button
-        android:visibility="gone"
-        android:id="@+id/startRecord"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="    녹화 시작    "
-        app:layout_constraintTop_toBottomOf="@id/M_layout"
-        app:layout_constraintBottom_toTopOf="@id/skipRecord"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
-
-    <android.widget.Button
-        android:visibility="gone"
-        android:id="@+id/skipRecord"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="녹화 건너뛰기"
-        app:layout_constraintTop_toBottomOf="@id/startRecord"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
