--- a/app/src/main/res/anim/goout.xml
+++ b/app/src/main/res/anim/goout.xml
@@ -10,6 +10,6 @@
         android:pivotX="50%"
         android:pivotY="50%"
         android:interpolator="@android:anim/decelerate_interpolator"
-        >
+        android:repeatCount="infinite">
     </scale>
 </set>
