--- a/app/src/main/res/anim/comein.xml
+++ b/app/src/main/res/anim/comein.xml
@@ -9,6 +9,6 @@
         android:toYScale="1.4"
         android:pivotX="50%"
         android:pivotY="50%"
-        >
+        android:repeatCount="infinite">
     </scale>
 </set>
