--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/signin_layout"
-        android:weightSum="2">
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight=".1">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:gravity="center"
-            android:textSize="30sp"
-            android:text="Motion Diary"
-            android:textColor="@color/black"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/title_logo"/>
 
     </LinearLayout>
 
@@ -24,8 +20,7 @@
         android:id="@+id/signin_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/buttons_layout"
-        android:gravity="bottom"
+        android:layout_weight=".01"
         android:orientation="vertical">
 
         <!-- EditText - User ID -->
@@ -61,36 +56,44 @@
     <LinearLayout
         android:id="@+id/buttons_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="50dp"
-        android:gravity="bottom"
+        android:layout_height="0dp"
+        android:layout_weight=".1"
         android:orientation="vertical">
 
         <!-- Button -->
         <android.widget.Button
             android:id="@+id/signup_button"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="5dp"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="20dp"
             android:backgroundTint="@color/black"
             android:text="회원가입"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textSize="18sp"/>
 
         <android.widget.Button
             android:id="@+id/login_button"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="50dp"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="20dp"
             android:backgroundTint="@color/black"
             android:text="로그인"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textSize="18sp"/>
 
     </LinearLayout>
 
-</RelativeLayout>
+    <Button
+        android:visibility="gone"
+        android:id="@+id/animExam"
+        android:backgroundTint="#555555"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="100dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="15dp"
+        android:textColor="@color/white"
+        android:text="모션 예제"/>
+
+</LinearLayout>
