--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -14,7 +14,7 @@
             android:id="@+id/detailRecycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/item_userGroup"/>
+            tools:listitem="@layout/item_user_group"/>
 
         <android.widget.Button
             android:id="@+id/add_grp"
