--- a/app/src/main/res/anim/bounce.xml
+++ b/app/src/main/res/anim/bounce.xml
@@ -7,8 +7,7 @@
         android:toYDelta="-40%"
         android:repeatCount="infinite"
         android:repeatMode= "reverse"
-        android:interpolator="@android:anim/bounce_interpolator"
-        />
+        android:interpolator="@android:anim/bounce_interpolator" />
     <scale
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:duration="200"
@@ -20,8 +19,5 @@
         android:pivotY="0"
         android:repeatCount="infinite"
         android:repeatMode= "reverse"
-        android:interpolator="@android:anim/bounce_interpolator"
-        />
-
-
+        android:interpolator="@android:anim/bounce_interpolator"/>
 </set>
