--- a/app/src/main/res/anim/roll.xml
+++ b/app/src/main/res/anim/roll.xml
@@ -3,7 +3,7 @@
 
     <rotate xmlns:android="http://schemas.android.com/apk/res/android"
         android:interpolator="@android:anim/accelerate_decelerate_interpolator"
-        android:repeatCount="150"
+        android:repeatCount="infinite"
         android:duration="1000"
         android:pivotX="50%"
         android:pivotY="50%"
@@ -18,7 +18,5 @@
         android:toXDelta="1000"
         android:repeatMode= "reverse"
         android:fillAfter="true"
-        />
-
-
+        android:repeatCount="infinite"/>
 </set>
